--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </p>
 
                 <p>您可以通过这里直接下载最新版本。</p>
-                <a href="http://00.123yes.me/a1/xz/tushi.apk" target="_blank" class="btn btn-secondary mt-2">立即下载TuShi</a>
-                <a href="http://00.123yes.me/a1/look.html" target="_blank" class="btn btn-primary mt-2">获取最新子软件</a>
+                <a href="http://me/xz/tushi.apk" target="_blank" class="btn btn-secondary mt-2">立即下载TuShi</a>
+                <a href="http://me/look.html" target="_blank" class="btn btn-primary mt-2">获取最新子软件</a>
 
 
                 <h4 class="mt-4">Hello TuShi！</h4>
